--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,14 @@ local.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# JetBrains IntelliJ
+
+.idea/
+*.iws
+out/
+.idea_modules/
+*.iml
+
+# Maven
+target/
